[gd_scene load_steps=5 format=3 uid="uid://uxafeaixi51b"]

[ext_resource type="Script" path="res://Scripts/game_board.gd" id="1_xjmd6"]
[ext_resource type="PackedScene" uid="uid://bt3o7e3sy2ltu" path="res://Scenes/side_board.tscn" id="3_guo4f"]
[ext_resource type="Texture2D" uid="uid://d4kq6v1lx7qb2" path="res://Art/Shutter.png" id="4_i6ubf"]
[ext_resource type="Texture2D" uid="uid://djky6bpcc888w" path="res://Art/backdrop.png" id="4_l5xhq"]

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_xjmd6")

[node name="SideBoard" parent="." instance=ExtResource("3_guo4f")]
z_index = 4

[node name="Score_Label" type="Label" parent="."]
z_index = 4
offset_right = 40.0
offset_bottom = 23.0

[node name="Goal_Label" type="Label" parent="."]
z_index = 4
offset_left = 200.0
offset_right = 240.0
offset_bottom = 23.0

[node name="Turns_Label" type="Label" parent="."]
z_index = 4
offset_left = 400.0
offset_right = 440.0
offset_bottom = 23.0

[node name="Diamonds_Label" type="Label" parent="."]
z_index = 4
offset_left = 600.0
offset_right = 640.0
offset_bottom = 23.0

[node name="Backdrop" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(640, 360)
texture = ExtResource("4_l5xhq")

[node name="InstantExpiryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShutterSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(640, -640)
texture = ExtResource("4_i6ubf")

[node name="Button" type="Button" parent="."]
z_index = 3
offset_left = 528.0
offset_top = 670.0
offset_right = 621.0
offset_bottom = 701.0
text = "Guidebook"

[connection signal="card_activated" from="SideBoard" to="." method="_on_side_board_card_activated"]
[connection signal="timeout" from="InstantExpiryTimer" to="." method="_on_instant_expiry_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
